Added modification according screen size

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZG3AzMmw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+<meta charset=utf-8 />
+<meta name="author" content="Maryna Pelina"/>
+<meta name="keywords" content="mosquito nets, net that does not cover the view, designer mosquito net"/>
+<meta name="description" content="A website for an Invisible Screens. Displays Mosquito Nets that were specialy made for St Boulevard Buildings." />
+<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="shortcut icon" href="https://icons8.com/icon/98686/bug"/>
+</head>
+<div id="whitebackground">
+  <iframe loading="lazy" id="mainbody"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZG3AzMmw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen" ><!---->
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZG3AzMmw&#x2F;view?utm_content=DAFZG3AzMmw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Invisible Flyscreens Mosquito Net</a> by Maryna Pelina
+<!-- <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZG3AzMmw&#x2F;view?utm_content=DAFZG3AzMmw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Invisible Flyscreens Mosquito Net</a> by Maryna Pelina -->
