Added icon of web

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 <meta name="keywords" content="mosquito nets, net that does not cover the view, designer mosquito net"/>
 <meta name="description" content="A website for an Invisible Screens. Displays Mosquito Nets that were specialy made for St Boulevard Buildings." />
 <link rel="stylesheet" type="text/css" href="styles.css">
-<link rel="shortcut icon" href="https://icons8.com/icon/98686/bug"/>
+<link rel="shortcut icon" href="icons8spiderweb.png"/>
 </head>
 <div id="whitebackground">
   <iframe loading="lazy" id="mainbody"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZG3AzMmw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen" ><!---->
+  </iframe>
+  <iframe loading="lazy" id="mainbody"
+    src="https://www.canva.com/design/DAFZG3AzMmw/5H2pieLzXSAbJmaU4hchzA/view?website#2:invisible-2" allowfullscreen="allowfullscreen" allow="fullscreen" ><!---->
   </iframe>
 </div>
 <!-- <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZG3AzMmw&#x2F;view?utm_content=DAFZG3AzMmw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Invisible Flyscreens Mosquito Net</a> by Maryna Pelina -->
